@@ -255,8 +255,8 @@ static int cgi_response_parse(server *srv, connection *con, plugin_data *p, buff
 
 				status = strtol(s+9, NULL, 10);
 
-				if (con->http_status >= 100 &&
-				    con->http_status < 1000) {
+				if (status >= 100 &&
+				    status < 1000) {
 					/* we expected 3 digits and didn't got them */
 					con->parsed_response |= HTTP_STATUS;
 					con->http_status = status;
